--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     </div>
     <div class="container1">
         <div class="letter1" id="letter11">Chúc</div>
-        <div class="letter1" id="letter12">sĩ</div>
-        <div class="letter1" id="letter13">tử</div>
-        <div class="letter1" id="letter14">dễ</div>
-        <div class="letter1" id="letter15">thương</div>
-        <div class="letter1" id="letter16">nhất</div>
-        <div class="letter1" id="letter17">quả</div>
-        <div class="letter1" id="letter18">đất</div>
-        <div class="letter1" id="letter19">của</div>
-        <div class="letter1" id="letter20">anh</div>
+        <div class="letter1" id="letter12">Bùi</div>
+        <div class="letter1" id="letter13">Huyền</div>
+        <div class="letter1" id="letter14">Thương</div>
+        <div class="letter1" id="letter15">thi</div>
+        <div class="letter1" id="letter16">được</div>
+        <div class="letter1" id="letter17">full</div>
+        <div class="letter1" id="letter18">A</div>
+        <div class="letter1" id="letter19">nhee</div>
+        <div class="letter1" id="letter20">🤩🤩</div>
     </div> 
     <div class="container2">
         <div class="letter1" id="letter22">thành</div>
@@ -40,7 +40,7 @@
         <div class="letter1" id="letter32">mắn!</div>
     </div> 
       
-    <!-- . Chúc sĩ tử dễ thương nhất quả đất của anh thành công trong kỳ thi quan trọng này nhé! Anh luôn tin là em có thể làm được, hãy bình tĩnh làm bài và đạt điểm thật cao như những kỳ thi trước đây của em. Cầu chúc em gặp nhiều may mắn! -->
+    <!-- . Chúc cô sinh viên dễ thương nhất quả đất thành công trong kỳ học đầu tiên này nhé 😆! -->
 
     <div class="container">
 
