--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chúc em thi tốt</title>
+    <ti</title>
     <link rel="stylesheet" href="main.css">
     <link rel="shortcut icon" href="./graduation.png" type="image/x-icon">
 </head>
@@ -49,7 +49,7 @@
           </div>
         
           <span class="save"></span>
-    <audio src="music.mp3" autoplay></audio>
+    
     <script src="main.js"></script>
 </body>
 </html>
