--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
         
           <span class="save"></span>
-    
+    <audio src="music.mp3" autoplay></audio>
     <script src="main.js"></script>
 </body>
 </html>
